--- a/CSS Cheat Sheet Assignment/index.html
+++ b/CSS Cheat Sheet Assignment/index.html
@@ -1,98 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head></head>
-    <title>CSS cheat sheet</title>
-    <link rel="stylesheet" type="text/css"
-    href="style.css">
+<head>
+    <title>My Website</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-
-
 <body>
+    <header id="main-header">
+        <div class="container">
+        <h1> My Website</h1>
+        </div>
+    </header>
+
+    <nav id="navbar">
+        <div class="container">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        </div>
+    </nav>
+
+    <section id="showcase">
+        <div class="container">
+            <h1>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta beatae voluptatum fuga nemo sint illum molestiae porro eligendi quae eaque? 
+            </h1>
+        </div>
+    </section>
+
     <div class="container">
-        <div class="box-1">
-            <h1>Hello World</h1>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere harum sed exercitationem repellat quaerat natus reprehenderit deleniti aspernatur, incidunt facilis at vel a est reiciendis id ab rerum tempore voluptatum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere harum sed exercitationem repellat quaerat natus reprehenderit deleniti aspernatur, incidunt facilis at vel a est reiciendis id ab rerum tempore voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere harum sed exercitationem repellat quaerat natus reprehenderit deleniti aspernatur, incidunt facilis at vel a est reiciendis id ab rerum tempore voluptatum.</p>
-        </div>
 
-        <div class="box-2">
-            <h1>Goodbye World</h1>
-             <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere harum sed exercitationem repellat quaerat natus reprehenderit deleniti aspernatur, incidunt facilis at vel a est reiciendis id ab rerum tempore voluptatum.Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere harum sed exercitationem repellat quaerat natus reprehenderit deleniti aspernatur, incidunt facilis at vel a est reiciendis id ab rerum tempore voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere harum sed exercitationem repellat quaerat natus reprehenderit deleniti aspernatur, incidunt facilis at vel a est reiciendis id ab rerum tempore voluptatum.</p>
-             <a class="button" href=""> Read More</a>
-        </div>
+       <section id="main">
+        <h1>Welcome!</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex quis unde nemo debitis voluptatum tempore minus reiciendis quasi amet praesentium quas facilis sequi aliquid odio, autem sapiente! At, facere nisi. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio voluptatem quo delectus exercitationem velit atque vitae quaerat quia temporibus magni quas ipsum minima fugit, placeat officiis explicabo necessitatibus dolores totam!</p>
+    </section>
 
-        <div class="categories">
-            <h2>Categories</h2>
-            <ul>
-                <li><a href="#">Category 1</a></li>
-                <li><a href="#">Category 2</a></li>
-                <li><a href="#">Category 3</a></li>
-                <li><a href="#">Category 4</a></li>
-            </ul>
-        </div>
 
-        <form class="my-form">
-            <div class="form-group">
-                <label> Name: </label>
-                <input type="text" name="name">
-            </div>
-            <div class="form-group">
-                <label> Email: </label>
-                <input type="text" name="email">
-            </div>
-            <div class="form-group">
-                <label> Message: </label>
-                <textarea name="message"></textarea>
-            </div>
-            <input class="button" type="submit" value="Submit" name="">
-        </form>
+    <aside id="sidebar">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex quis unde nemo debitis voluptatum tempore minus reiciendis quasi amet praesentium quas facilis sequi aliquid odio, autem sapiente! At, facere nisi. Lorem, ipsum dolor sit amet consectetur adipisicing dolores totam!</p>
+    </aside>
 
-        <div class="block">
-            <h3> Heading</h3>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium explicabo magnam praesentium cumque omnis inventore eveniet in velit, sequi dignissimos eaque sit maiores quisquam laborum. Recusandae sapiente accusamus esse.</p>
-        </div>
-
-        <div class="block">
-            <h3> Heading</h3>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium explicabo magnam praesentium cumque omnis inventore eveniet in velit, sequi dignissimos eaque sit maiores quisquam laborum. Recusandae sapiente accusamus esse.</p>
-        </div>
-
-        <div class="block">
-            <h3> Heading</h3>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium explicabo magnam praesentium cumque omnis inventore eveniet in velit, sequi dignissimos eaque sit maiores quisquam laborum. Recusandae sapiente accusamus esse.</p>
-        </div>
-
-        <div class="clr"></div>
-
-        <div id="main block">
-            <h3> Heading</h3>
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium explicabo magnam praesentium cumque omnis inventore eveniet in velit, sequi dignissimos eaque sit maiores quisquam laborum. Recusandae sapiente accusamus esse.</p>
-        </div>
-
-        <div id="sidebar">
-            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut laudantium explicabo magnam praesentium cumque omnis inventore eveniet in velit, sequi dignissimos eaque sit maiores quisquam laborum. Recusandae sapiente accusamus esse.</p>
-        </div>
-    
-    <div class="clr"></div>
-
-    <div class="p-box">
-    <h1> Hello</h1>
-    <h2> Goodbye</h2>
     </div>
 
-    <ul class="my-list">
-        <li>List Item</li>
-        <li>List Item</li>
-        <li>List Item</li>
-        <li>List Item</li>
-        <li>List Item</li>
-        <li>List Item</li>
-        <li>List Item</li>
-        <li>List Item</li>
-    </ul>
-
-    </div> <!--container ends-->
-    <a class="fix-me button" href=""> Hello </a>
-    
+    <footer id="main-footer">
+        <p>Copyright &copy;2023; My Website</p>
+    </footer>
 </body>
 </html>
